--- a/pre-week/React/React-photo-album/index.html
+++ b/pre-week/React/React-photo-album/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>React Photo Album</title>
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
