added filtering by region

--- a/week-04/EtsyAJAX/index.html
+++ b/week-04/EtsyAJAX/index.html
@@ -7,11 +7,53 @@
   </head>
   <body>
     <div class="container">
-      <div class="nav-bar">NAV BAR</div>
+      <div class="nav-bar">
+        <ul>All Categories
+          <li>Craft &amp; Supplies</li>
+          <li>Art &amp; Collectibles</li>
+          <li>Home &amp; Living</li>
+          <li>Toys &amp; Games</li>
+          <li>Clothing</li>
+          <li>Paper &amp; Party Supplies</li>
+          <li>Accessories</li>
+          <li>Jewelry</li>
+        </ul>
+
+        <ul>Shop Location
+          <form>
+            <li>
+              <input class="region-radio" id="anywhere-radio" type="radio" name="region" value="" checked>
+              <label for="anywhere-radio">Anywhere</label>
+            </li>
+
+            <li>
+              <input class="region-radio" id="us-radio" type="radio" name="region" value="US">
+              <label for="us-radio">United States</label>
+            </li>
+
+            <li>
+              <input class="region-radio" id="ca-radio" type="radio" name="region" value="CA">
+              <label for="ca-radio">Canada</label>
+            </li>
+          </form>
+        </ul>
+
+        <ul>All Categories
+          <li>Craft &amp; Supplies</li>
+          <li>Art &amp; Collectibles</li>
+          <li>Home &amp; Living</li>
+          <li>Toys &amp; Games</li>
+          <li>Clothing</li>
+          <li>Paper &amp; Party Supplies</li>
+          <li>Accessories</li>
+          <li>Jewelry</li>
+        </ul>
+
+      </div>
       <form class="search-form">
         <div class="form-obj">
           <input class="key-string" />
-          <div type="submit" class="submit-btn">Submit</div>
+          <button type="submit" class="submit-btn">Search</button>
         </div>
         <ul class="search-images">
         </ul>
