--- a/week-09/spotify-app/app/index.html
+++ b/week-09/spotify-app/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Change Me</title>
+    <title>Spotify Me</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
